--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 * {
     box-sizing: border-box;
   }
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
   
   body {
     margin: 0;
