--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,13 @@
     bottom: 0;
     min-width: 100%; 
     min-height: 100%;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
   }
   
   .content {
