--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,18 @@
   }
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
   
+  html{
+    height: 100%;
+  }
+
   body {
+    
     margin: 0;
     font-family: Arial;
     font-size: 17px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
   }
   
   #myVideo {
@@ -25,13 +33,38 @@
     z-index: -1;
   }
   
-  .content {
-    position: fixed;
+  .mygif{
+    width: 400px;
+    height: auto;
+  }
+
+  .mainContent{
+    overflow: auto;
+    padding: 20px 50px;
+   display: flex;
+    min-height: 100%;
+  }
+
+  .footer2 {
+    margin-top: auto;
     bottom: 0;
     background: rgba(0, 0, 0, 0.9);
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
+    position: relative;
+   
+  }
+
+
+  .footer {
+    
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.9);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+    position: absolute;
   }
   
   #myBtn {
@@ -42,6 +75,13 @@
     background: rgb(0, 0, 0);
     color: #fff;
     cursor: pointer;
+  }
+
+  .myDetails p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.8;
   }
   
   #myBtn:hover {
