--- a/styles.css
+++ b/styles.css
@@ -1,114 +1,112 @@
-
-* {
-    box-sizing: border-box;
-  }
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+*{
+  box-sizing: content-box;
   
-  html{
-    height: 100%;
-  }
+}
 
-  body {
+html, body{
+margin: 0;
+padding: 0;
+font-family: 'Heebo', sans-serif;
+background-color: #FFFFFF;
+}
+
+.nav-item a{
+  font-family: 'Heebo', sans-serif;
+  font-size: 20px;
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+ 
+}
+
+
+
+
+.nav{
+  padding-top: 25px;
+  padding-right:150px ;
+}
+
+.hero-text{
+  font-family: 'Heebo', sans-serif;
+  color: #21243D;
+  text-align: left;
+  padding-top: 100px;
+}
+.hero-text a{
+  color: #FFFFFF;
+  background-color:#21243D ;
+  border: none;
+}
+
+.hero-text h2{
+  font-size: 44px;font-weight: bold;
+}
+
+
+.hero-text p{
+  font-size: 16px; 
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+
+.hero-img{
+  text-align: center;
+  padding-top: 100px;
+}
+.hero-img img{
+  text-align: center;
+  border: #21243D 1px;
+  border-radius: 50%;
+  height: 200px;
+}
+
+@media (min-width:320px)  { 
+  .nav{
+    padding-right: 0px;
     
-    margin: 0;
-    font-family: Arial;
-    font-size: 17px;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-  }
-  
-  #myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-  
-  .mygif{
-    width: 400px;
-    height: auto;
   }
 
-  .mainContent{
-    overflow: auto;
-    padding: 20px 50px;
-   display: flex;
-    min-height: 100%;
+  .row{
+    flex-direction: column-reverse;
   }
 
-  .footer2 {
-    margin-top: auto;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.9);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
-    position: relative;
-   
-  }
-
-
-  .footer {
-    
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.9);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
-    position: absolute;
-  }
-  
-  #myBtn {
-    width: 200px;
-    font-size: 18px;
-    padding: 10px;
-    border: none;
-    background: rgb(0, 0, 0);
-    color: #fff;
-    cursor: pointer;
-  }
-
-  .myDetails p{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+  .hero-text{
+    padding-top: 50px;
     text-align: center;
-    line-height: 1.8;
   }
+
+}
+
+
+
+@media (min-width:481px)  { 
+  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+  .nav{
+    padding-right: 150px;
+  }
+  .row{
+    flex-direction: row;
+  }
+
+
+}
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
   
-  #myBtn:hover {
-    background: #ddd;
-    color: black;
+}
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
+
+}
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ 
+  .hero-text{
+    padding-top: 50px;
+    text-align: left;
   }
-  
-  .logo{
-      text-align: right;
+}
+@media (min-width:1281px) { 
+  .hero-text{
+    padding-top: 50px;
+    text-align: left;
   }
-  .menu{
-      display: inline;
-  }
-  .menu h5{
-      padding:  20px 10px;
-      font-size: 26px;
-      color: #f1f1f1;
-      text-decoration: none;
-  }
-  .menu a.nostyle:link {
-      text-decoration: inherit;
-      color: inherit;
-      cursor: auto;
-      
-  }
-  #icon{
-      font-size: 25px;
-      padding: 5px;
-      color: #fff;
-  }
+ }
